--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -38,6 +38,14 @@ jobs:
 
       - uses: actions/checkout@v3
 
+      - name: Install pip
+        shell: bash
+        run: |
+          # Update package lists
+          sudo apt-get update
+          # Install Python3 and pip
+          sudo apt-get install -y python3-pip
+
       - name: Modify values file
         shell: bash
         run: |
