--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -59,7 +59,7 @@ jobs:
       - name: Argocd app sync
         shell: bash
         run: |
-          argocd login argocd-server.argocd \
+          argocd login argocd.test.com \
             --insecure  \
             --grpc-web \
             --username admin \
