--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -52,14 +52,14 @@ jobs:
       - name: Install argocd
         shell: bash
         run: |
-          curl -ksSL -o argocd https://argocd-server.argocd/download/argocd-linux-amd64
+          curl -sSL -o argocd https://github.com/argoproj/argo-cd/releases/latest/download/argocd-linux-amd64
           chmod +x argocd
           sudo mv ./argocd /usr/local/bin/argocd
 
       - name: Argocd app sync
         shell: bash
         run: |
-          argocd login argocd.test.com \
+          argocd login argocd-server.argocd \
             --insecure  \
             --grpc-web \
             --username admin \
