--- a/charts/python-app/values.yaml
+++ b/charts/python-app/values.yaml
@@ -2,7 +2,7 @@ replicaCount: 1
 image:
   repository: aronnordcloud/python-app
   pullPolicy: IfNotPresent
-  tag: d54859
+  tag: 3987ad
 imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
