Updates values.yaml with commit b9923b

--- a/charts/python-app/values.yaml
+++ b/charts/python-app/values.yaml
@@ -2,7 +2,7 @@ replicaCount: 1
 image:
   repository: aronnordcloud/python-app
   pullPolicy: IfNotPresent
-  tag: 3987ad
+  tag: b9923b
 imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
