--- a/charts/python-app/values.yaml
+++ b/charts/python-app/values.yaml
@@ -2,7 +2,7 @@ replicaCount: 1
 image:
   repository: aronnordcloud/python-app
   pullPolicy: IfNotPresent
-  tag: b9923b
+  tag: 1f3c9c
 imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
