--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -59,5 +59,5 @@ jobs:
       - name: Argocd app sync
         shell: bash
         run: |
-          argocd login argocd.test.com --insecure --grpc-web --username admin --password "${{ secrets.ARGOCD_PASSWORD }}"
+          argocd login argocd-server.argocd --insecure --grpc-web --username admin --password "${{ secrets.ARGOCD_PASSWORD }}"
           argocd app sync python-app
