Updates values.yaml with commit dfb896

--- a/charts/python-app/values.yaml
+++ b/charts/python-app/values.yaml
@@ -2,7 +2,7 @@ replicaCount: 1
 image:
   repository: aronnordcloud/python-app
   pullPolicy: IfNotPresent
-  tag: 1f3c9c
+  tag: dfb896
 imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
