Updates values.yaml with commit 09d808

--- a/charts/python-app/values.yaml
+++ b/charts/python-app/values.yaml
@@ -2,7 +2,7 @@ replicaCount: 1
 image:
   repository: aronnordcloud/python-app
   pullPolicy: IfNotPresent
-  tag: a1afa1
+  tag: 09d808
 imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
