Updates values.yaml with commit fb428e

--- a/charts/python-app/values.yaml
+++ b/charts/python-app/values.yaml
@@ -2,7 +2,7 @@ replicaCount: 1
 image:
   repository: aronnordcloud/python-app
   pullPolicy: IfNotPresent
-  tag: 62fb9e
+  tag: fb428e
 imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
