--- a/charts/python-app/values.yaml
+++ b/charts/python-app/values.yaml
@@ -2,7 +2,7 @@ replicaCount: 1
 image:
   repository: aronnordcloud/python-app
   pullPolicy: IfNotPresent
-  tag: fb428e
+  tag: 8a3859
 imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
